# xev

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt
app/choo/: CMakeLists.txt
app/choo/inc/: game.h  gui.h
app/choo/src/: game.cpp  gui.cpp  main.cpp
app/demo/: CMakeLists.txt
app/demo/inc/: app.h
app/demo/src/: app.cpp  main.cpp
app/game0/: CMakeLists.txt
app/game0/shaders/: mesh.slang  triangle.slang
app/game0/src/: game.cpp  main.cpp
assets/: bunny.glb  player.glb  test.glb
cmake/: shader.cmake
inc/xev/: app.h  backend.h  camera.h  logger.h  renderer.h  scene.h  shader.h
src/: app.cpp  backend.cpp  camera.cpp  logger.cpp  main.cpp  renderer.cpp  scene.cpp  window.cpp
src/shaders/: mesh.slang
tests/: CMakeLists.txt  test_shader.cpp
xev/: CMakeLists.txt
xev/inc/xev/: backend.h  buffer.h  camera.h  common.h  controller.h  frame_arg.h  image.h  logger.h  material.h  mesh.h  renderer.h  renderer2D.h  renderer3D.h  scene.h  vma.h  window.h
xev/inc/xev/pipelines/: mesh_pipeline.h  pipeline.h  pipeline_mesh.h
xev/src/: backend.cpp  controller.cpp  material.cpp  mesh.cpp  renderer.cpp  renderer3D.cpp  scene.cpp  shader.cpp  vma.cpp  volk.cpp  window.cpp
xev/src/pipelines/: mesh_pipeline.cpp  pipeline_mesh.cpp
xev/src/shaders/: light.slang  scene.slang
